@@ -21,7 +21,8 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* [mjr] Fix corruption of search terms due to stick reference (PR #2)
+* [mjr] Allow searching by DateTime as well as Date (PR #3, Robin Appelman &lt;robin@icewind.nl&gt;).
+* [mjr] Fix corruption of search terms due to sticky reference (PR #2).
 * [mjr] Fix retrying FETCH after an UNKNOWN-CTE error in certain cases (PR #1, stefanolaf).
 * [mjr] Fix fatal error in dealing with certain exceptions.
  </notes>
@@ -3442,7 +3443,8 @@
    <date>2017-10-20</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* [mjr] Fix corruption of search terms due to stick reference (PR #2)
+* [mjr] Allow searching by DateTime as well as Date (PR #3, Robin Appelman &lt;robin@icewind.nl&gt;).
+* [mjr] Fix corruption of search terms due to sticky reference (PR #2).
 * [mjr] Fix retrying FETCH after an UNKNOWN-CTE error in certain cases (PR #1, stefanolaf).
 * [mjr] Fix fatal error in dealing with certain exceptions.
    </notes>
